Add batch files in the installers
git-svn-id: https://svn.apache.org/repos/asf/incubator/servicemix/branches/osgi@541470 13f79535-47bb-0310-9956-ffa450edef68